some changes in properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 spring.application.name=RecipeMLKer
-spring.ai.openai.api-key= key
+server.port=8081
+#spring.ai.openai.api-key=
+#s
+#k-proj-QeKpLBGD4N
+#OZfoWeaOxuT3BlbkFJfLYrCXVagXrWv3of2XuL
+spring.ai.openai.chat.options.model=gpt-3.5-turbo
+spring.ai.openai.chat.options.temperature=0.7
+spring.datasource.url = jdbc:postgresql://localhost:5433/RecipeMLKer
+spring.datasource.username=Admin_RecipeMLKer
+spring.datasource.password=1
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
