some changes in properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,6 @@
 spring.application.name=RecipeMLKer
 server.port=8081
-#spring.ai.openai.api-key=
-#s
-#k-proj-QeKpLBGD4N
-#OZfoWeaOxuT3BlbkFJfLYrCXVagXrWv3of2XuL
+spring.ai.openai.api-key=sk-proj-QeKpLBGD4NOZfoWeaOxuT3BlbkFJfLYrCXVagXrWv3of2XuL
 spring.ai.openai.chat.options.model=gpt-3.5-turbo
 spring.ai.openai.chat.options.temperature=0.7
 spring.datasource.url = jdbc:postgresql://localhost:5433/RecipeMLKer
