--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.ai.openai.chat.options.temperature=0.8
 spring.datasource.url = jdbc:postgresql://localhost:5433/RecipeMLKer
 spring.datasource.username=Admin_RecipeMLKer
 spring.datasource.password=1
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
