added all models

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.url = jdbc:postgresql://localhost:5433/RecipeMLKer
 spring.datasource.username=Admin_RecipeMLKer
 spring.datasource.password=1
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.open-in-view=true
