--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.username=Admin_RecipeMLKer
 spring.datasource.password=1
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
