Some tries to configure spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.title=RecipeMLKer
+spring.application.name=RecipeMLKer
 server.port=8081
 spring.ai.openai.api-key=sk-proj-2aXbvpVRfwSMXDgWSNdHT3BlbkFJILSNTgcnULFOT8nQM4cd
 spring.ai.openai.chat.options.model=gpt-3.5-turbo
