--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.username=Admin_RecipeMLKer
 spring.datasource.password=1
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
+rsa.private-key=classpath:keys/private-key.pem
+rsa.public-key=classpath:keys/public-key.pem
