--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=RecipeMLKer
+server.port=8081
+spring.ai.openai.api-key=sk-proj-2aXbvpVRfwSMXDgWSNdHT3BlbkFJILSNTgcnULFOT8nQM4cd
+spring.ai.openai.chat.options.model=gpt-3.5-turbo
+spring.ai.openai.chat.options.temperature=0.8
+spring.datasource.url=jdbc:postgresql://localhost:5433/RecipeMLKer
+spring.datasource.username=Admin_RecipeMLKer
+spring.datasource.password=1
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=true
+token.signing.key=SigningKeyRecipeMLKeraahahahhaha9h129h31h9a9ha9
